2003-09-13  Pavel Roskin  <proski@gnu.org>

	* dlg.h: Remove "first" field for dialogs and DLG_HAS_MENUBAR.
	* dlg.c (dlg_mouse_event): Remove menubar hack.
	* screen.c (do_panel_event): Redirect mouse events on the upper
	frame to the menubar if it's invisible.
	(panel_event): Don't repaint the panel after redirected events.

2003-09-12  Pavel Roskin  <proski@gnu.org>

	* screen.c (panel_event): Make sure that the panel is repainted
	after the event is processed.

	* hotlist.c (l_call): Fix incorrect calls to hotlist_callback().

	* dlg.h: Merge Widget_Item into Widget.  Massive adjustment.

	* main.c (setup_panels_and_run_mc): Use straight widget order in
	midnight_dlg.  Select initial panel by dlg_select_widget().

	* menu.h (WMenu): Save pointer to the previous widget, not its
	number.  Adjust all dependencies.
	* menu.c (menubar_finish): Restore focus on the saved widget.
	* dlg.c (dlg_item_number): Remove, it's unused now.
	(dlg_select_nth_widget): Likewise.

	* help.c (interactive_display): Use straight widget order.

	* complete.c (complete_engine): Don't need DLG_REVERSE.
	* widget.c (show_hist): Likewise.
	* view.c (view): Use straight widget order.

	* dlg.h: Replace DLG_BACKWARD to DLG_REVERSE with a better
	defined meaning.  Make it default to populate dialogs from the
	top.  Change all calls to create_dlg().

	* dlg.c: DLG_BACKWARD now affects how the dialog is populated by
	widgets, not the runtime behavior.
	(init_dlg): Don't change current widget.  This allows using
	dlg_select_widget() before the dialog is run.
	* dlg.h: Remove initfocus field.
	* wtools.c (query_dialog): Use dlg_select_widget(), not
	initfocus to set the initial widget.

	* widget.c (input_callback): Don't handle Enter.
	Requested by Ali Akcaagac <aliakc@web.de>

	* chmod.c (chmod_callback): Fix uninitialized variable.

2003-09-11  Pavel Roskin  <proski@gnu.org>

	* main.c (midnight_callback): Don't redraw dirty panels if the
	menubar is active.
