@@ -980,7 +980,7 @@ menu_last_selected_cmd (void)
 {
     the_menubar->active = 1;
     the_menubar->dropped = drop_menus;
-    the_menubar->previous_widget = midnight_dlg->current;
+    the_menubar->previous_widget = midnight_dlg->current->dlg_id;
     dlg_select_widget (midnight_dlg, the_menubar);
 }
 
